feat: add entry point, models and metadata gestion