@@ -28,6 +28,9 @@ allprojects {
         api("org.slf4j:slf4j-api:2.0.9")
 
         testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
+        testImplementation("org.assertj:assertj-core:3.24.2")
+        testImplementation("org.mockito:mockito-core:5.7.0")
+        testImplementation("org.mockito:mockito-junit-jupiter:5.7.0")
         testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     }
 
@@ -38,6 +41,16 @@ allprojects {
 
     tasks.test {
         useJUnitPlatform()
+        testLogging {
+            events("passed", "skipped", "failed")
+            exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+            showStandardStreams = false
+        }
+
+        jvmArgs(
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED"
+        )
     }
 }
 
